crates/compiler/tests/parse_errors/leading_zeros.elm
module Main exposing (..)

x = 00
